--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -1,5 +1,4 @@
 name: Docker Build Deploy
-
 on:
   push:
     branches: [ master ]
@@ -8,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      name: run shell script
-      run: echo commit hash is ${{ steps.vars.outputs.sha_short }}
+    - name: run shell script
+      run: echo commit hash is ${{ github.sha }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:${{ steps.vars.outputs.sha_short }}
+      run: docker build . --file Dockerfile --tag my-image-name:${{ github.sha }}
