--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -24,3 +24,8 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/ctse_2022:${{ github.sha }}
+    - uses: actions-hub/kubectl@master
+      env:
+        KUBE_CONFIG: ${{ SECRETS.KUBE_CONFIG }}
+      with:
+        args: get namespaces
