--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -27,12 +27,12 @@ spec:
       containers:
       - image: it19051376/ctse_2022:803282f5f7f044962934c41b26f98b3ebb1b7d0e
         imagePullPolicy: Always
-        name: ctse-2022-5qrds
+        name: ctse-2022-zdqc6
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
-        ports:
-          - containerPort: 3000 
+        ports: 
+          - containerPort: 3000
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
