--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -25,7 +25,7 @@ spec:
         app: test-sliit
     spec:
       containers:
-      - image: it19051376/ctse_2022:803282f5f7f044962934c41b26f98b3ebb1b7d0e
+      - image: it19051376/ctse_2022:{{tag}}
         imagePullPolicy: Always
         name: ctse-2022-jnf2s
         resources: {}
